Fixed dark mode for the rest of app

--- a/src/client/src/components/add_think_folder_modal/addThinkFolderModal.scss
+++ b/src/client/src/components/add_think_folder_modal/addThinkFolderModal.scss
@@ -31,11 +31,6 @@
   display: none;
 }
 
-.color-picker {
-  display: flex;
-  justify-content: center;
-}
-
 .color-swatch-selected-chip {
   display: flex;
   flex-direction: row;
